// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadConfig custom 1`] = `
Object {
  "base": "blogi",
  "description": "Hello World",
  "dest": "blogi",
  "title": "Hello World",
}
`;

exports[`loadConfig simple 1`] = `
Object {
  "description": "Hello World",
  "title": "Hello World",
}
`;
